Zen: fix contrast issue for links inside portlet headers

--- a/www/resources/css/portlets.css
+++ b/www/resources/css/portlets.css
@@ -7,6 +7,7 @@ are located in the css for that package (eg. Selva_calendar.css)  */
 	margin-bottom: 10px;
 }
 
+
 .portlet-header {
 	padding: 3px 5px 3px 5px;
 	border-top: 1px solid #fff;
@@ -39,6 +40,14 @@ are located in the css for that package (eg. Selva_calendar.css)  */
 }
 .portlet-controls img {
 	border: 0px;
+}
+
+.portlet-controls a:link {
+	color: #ffffff;
+}
+
+.portlet-controls a:hover {
+	color: #000000;
 }
 
 .portlet {
